--- a/Lab2/nbproject/project.properties
+++ b/Lab2/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=partADotsAndLines.DotGame
+main.class=partCDotGame.DotGame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
