Lec6 and Lab3 (A)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /Lec05/build/
 /Lab2/nbproject/private/
 /Lab2/build/
+/Lec06/nbproject/private/
+/Lec06/build/
+/Lab3/nbproject/private/
+/Lab3/build/
