--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /Lab3/build/
 /Lec07/nbproject/private/
 /Lec07/build/
+/GridWorldCode/JavaApplication11/nbproject/private/
+/GridWorld/nbproject/private/
+/GridWorld/build/
