Lab 4 temporary commit

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /GridWorldCode/JavaApplication11/nbproject/private/
 /GridWorld/nbproject/private/
 /GridWorld/build/
+/lab4/nbproject/private/
+/lab4/build/
