Added Lec09 and Project

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /GridWorld/build/
 /lab4/nbproject/private/
 /lab4/build/
+/Lec09/nbproject/private/
+/Lec09/build/
+/project/nbproject/private/
+/project/build/
